Complete all ML and ICS assignments

--- a/ML/2/DecisionTreeClassifier.ipynb
+++ b/ML/2/DecisionTreeClassifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,10 +333,10 @@
     "            print(\"Please fit the dataset using the fit function before prediciting values\")\n",
     "            return\n",
     "        X = self.transform_input(X)\n",
-    "        y = [self.predictInstance(row) for row in X]\n",
+    "        y = [self.predict_instance(row) for row in X]\n",
     "        return np.array(y).astype(int)\n",
     "    \n",
-    "    def predictInstance(self, row):\n",
+    "    def predict_instance(self, row):\n",
     "        '''\n",
     "        This function recursively iterates through the decision tree and predicts the label\n",
     "        of a single row of data.\n",
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "4   > 35     Low  Female         Single  Yes"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
        "13   > 35  Medium    Male        Married   No"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
        "13    2       1       1               1     0"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
        "0    0       0       0               1"
       ]
      },
-     "execution_count": 330,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
